deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "deployment-2048"
spec:
  selector:
    matchLabels:
      app: "2048"
  replicas: 2
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
        - image: alexwhen/docker-2048
          imagePullPolicy: Always
          name: "2048"
          ports:
            - containerPort: 80
              protocol: TCP
