deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: game2048
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: host.domain.ext
    http:
      paths:
      - backend:
          serviceName: deployment-2048
          servicePort: 80
